Fixed miner formatting issue
> Changed the contact page from bullet  points to an extra spaced paragraph.
> This looks better in Chrome than before. Firefox still looks good.

--- a/Styles.css
+++ b/Styles.css
@@ -96,3 +96,7 @@ body  {
 .testBorder { /* Only used to visualise placements. Just for temporary use. */
 	border: 2px solid #000000;
 }
+
+.extraLineSpacing {
+	line-height: 40px;
+}
